added code to get weather data

--- a/coronavirus_analysis.ipynb
+++ b/coronavirus_analysis.ipynb
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -646,6 +646,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
+       "      <td>1701</td>\n",
+       "      <td>2020-03-14</td>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>8086</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
        "      <td>1961</td>\n",
        "      <td>2020-03-14</td>\n",
        "      <td>Spain</td>\n",
@@ -654,29 +664,25 @@
        "      <td>4231</td>\n",
        "      <td>120.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>720</td>\n",
-       "      <td>2020-03-14</td>\n",
-       "      <td>France</td>\n",
-       "      <td>780.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>3640</td>\n",
-       "      <td>79.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   index       date location  new_cases  new_deaths  total_cases  total_deaths\n",
-       "0   1085 2020-03-14    Italy     2547.0       252.0        17660        1268.0\n",
-       "1    986 2020-03-14     Iran     1289.0        85.0        11364         514.0\n",
-       "2   1961 2020-03-14    Spain     1266.0        36.0         4231         120.0\n",
-       "3    720 2020-03-14   France      780.0        18.0         3640          79.0"
+       "   index       date     location  new_cases  new_deaths  total_cases  \\\n",
+       "0   1085 2020-03-14        Italy     2547.0       252.0        17660   \n",
+       "1    986 2020-03-14         Iran     1289.0        85.0        11364   \n",
+       "2   1701 2020-03-14  South Korea      107.0         6.0         8086   \n",
+       "3   1961 2020-03-14        Spain     1266.0        36.0         4231   \n",
+       "\n",
+       "   total_deaths  \n",
+       "0        1268.0  \n",
+       "1         514.0  \n",
+       "2          72.0  \n",
+       "3         120.0  "
       ]
      },
-     "execution_count": 325,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,134 +1136,6 @@
    "metadata": {},
    "source": [
     "# Weather Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 327,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting wwo-hist\n",
-      "  Downloading https://files.pythonhosted.org/packages/9e/4b/e4f82813f1bd33195ca5eca204c7c312850592aba45dd819de0f2250d7fd/wwo_hist-0.0.4.tar.gz\n",
-      "Building wheels for collected packages: wwo-hist\n",
-      "  Building wheel for wwo-hist (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for wwo-hist: filename=wwo_hist-0.0.4-cp37-none-any.whl size=4217 sha256=59deaa43cc49cbc070503d20f94409e719c49e1e2400a846f76be74ddfc147f3\n",
-      "  Stored in directory: /Users/mohammedalawami/Library/Caches/pip/wheels/c5/0e/16/329d9233f3b0b7e5fe81b09c5519a193727999c6ae77577ca9\n",
-      "Successfully built wwo-hist\n",
-      "Installing collected packages: wwo-hist\n",
-      "Successfully installed wwo-hist-0.0.4\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install wwo-hist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 328,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from wwo_hist import retrieve_hist_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 338,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Retrieving weather data for China\n",
-      "\n",
-      "\n",
-      "Currently retrieving data for China: from 2020-01-22 to 2020-01-31\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:00.541395\n",
-      "Currently retrieving data for China: from 2020-02-01 to 2020-02-29\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:01.932568\n",
-      "Currently retrieving data for China: from 2020-03-01 to 2020-03-16\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:04.453550\n",
-      "\n",
-      "\n",
-      "export China completed!\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Retrieving weather data for Italy\n",
-      "\n",
-      "\n",
-      "Currently retrieving data for Italy: from 2020-01-22 to 2020-01-31\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:00.857306\n",
-      "Currently retrieving data for Italy: from 2020-02-01 to 2020-02-29\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:02.126760\n",
-      "Currently retrieving data for Italy: from 2020-03-01 to 2020-03-16\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:02.907873\n",
-      "\n",
-      "\n",
-      "export Italy completed!\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Retrieving weather data for Iran\n",
-      "\n",
-      "\n",
-      "Currently retrieving data for Iran: from 2020-01-22 to 2020-01-31\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:01.122426\n",
-      "Currently retrieving data for Iran: from 2020-02-01 to 2020-02-29\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:02.624204\n",
-      "Currently retrieving data for Iran: from 2020-03-01 to 2020-03-16\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:03.393460\n",
-      "\n",
-      "\n",
-      "export Iran completed!\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Retrieving weather data for Saudi\n",
-      "\n",
-      "\n",
-      "Currently retrieving data for Saudi: from 2020-01-22 to 2020-01-31\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:00.596315\n",
-      "Currently retrieving data for Saudi: from 2020-02-01 to 2020-02-29\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:01.661578\n",
-      "Currently retrieving data for Saudi: from 2020-03-01 to 2020-03-16\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:02.436990\n",
-      "\n",
-      "\n",
-      "export Saudi completed!\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "frequency=12\n",
-    "start_date = '22-JAN-2020'\n",
-    "end_date = datetime.datetime.today().strftime('%d-%b-%Y')\n",
-    "api_key = '473f9493d5f44972a2a185250201603'\n",
-    "location_list = ['China', 'Italy', 'Iran', 'Saudi']\n",
-    "\n",
-    "hist_weather_data = retrieve_hist_data(api_key,\n",
-    "                                location_list,\n",
-    "                                start_date,\n",
-    "                                end_date,\n",
-    "                                frequency,\n",
-    "                                location_label = False,\n",
-    "                                export_csv = True,\n",
-    "                                store_df = True)"
    ]
   },
   {
