added visualizations, updated ksa dataset

--- a/Notebooks/Weather data.ipynb
+++ b/Notebooks/Weather data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -30,36 +30,41 @@
      "text": [
       "\n",
       "\n",
-      "Retrieving weather data for Spain\n",
+      "Retrieving weather data for Hubei\n",
       "\n",
       "\n",
-      "Currently retrieving data for Spain: from 2020-01-22 to 2020-01-31\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:00.617036\n",
-      "Currently retrieving data for Spain: from 2020-02-01 to 2020-02-29\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:01.653949\n",
-      "Currently retrieving data for Spain: from 2020-03-01 to 2020-03-16\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:02.363259\n",
+      "Currently retrieving data for Hubei: from 2020-01-22 to 2020-01-31\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:01.383498\n",
+      "Currently retrieving data for Hubei: from 2020-02-01 to 2020-02-29\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:03.454339\n",
+      "Currently retrieving data for Hubei: from 2020-03-01 to 2020-03-27\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:04.815381\n",
       "\n",
       "\n",
-      "export Spain completed!\n",
+      "export Hubei completed!\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "frequency=12\n",
+    "frequency=24\n",
     "start_date = '22-JAN-2020'\n",
     "end_date = datetime.datetime.today().strftime('%d-%b-%Y')\n",
     "api_key = '473f9493d5f44972a2a185250201603'\n",
-    "location_list = ['China', 'Italy', 'Iran', 'Saudi', 'Spain'] # 'South Korea' 'Ko'\n",
+    "location_list = ['Hubei', 'Anhui', 'Fujian', 'Guizhou', 'Hebei', 'Jiangsu', 'Macau',\n",
+    "       'Ningxia', 'Shanxi', 'Yunnan', 'Guangxi', 'Jiangxi', 'Liaoning',\n",
+    "       'Shandong', 'Hainan', 'Hunan', 'Tianjin', 'Henan', 'Sichuan',\n",
+    "       'Chongqing', 'Shanghai', 'Zhejiang', 'Beijing', 'Guangdong',\n",
+    "       'Jilin', 'Gansu', 'Heilongjiang', 'Hong-Kong', 'Xinjiang',\n",
+    "       'Shaanxi', 'Inner-Mongolia', 'Qinghai', 'Tibet']\n",
     "\n",
     "hist_weather_data = retrieve_hist_data(api_key,\n",
     "                                location_list,\n",
     "                                start_date,\n",
     "                                end_date,\n",
     "                                frequency,\n",
-    "                                location_label = False,\n",
+    "                                location_label = True,\n",
     "                                export_csv = True,\n",
     "                                store_df = True)"
    ]
